[Fix] gap-unit 추가

--- a/user/css/common.css
+++ b/user/css/common.css
@@ -1,7 +1,14 @@
 @charset "utf-8";
 @import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 :root{
   /* LAYOUT */
   --base-unit: 20px;
@@ -34,6 +41,9 @@
   /* BOX-SHADOW */
   --mint-focus: 0px 0px 0px 5px rgba(42, 193, 188, 0.35);
   --card-shadow: 2px 3px 15px 0px rgba(0, 0, 0, 0.15);
+
+  /* Gap */
+  --gap-unit: 24px;
 }
 
 a{
@@ -43,10 +53,9 @@ a{
 
 /* LAYOUT */
 body{
-  background-color: var(--white);
   color: var(--black);
   font-family: 'Pretendard', sans-serif;
-  padding: 1% 3%;
+  font-size: var(--text3-size);
 }
 .background{
   max-width: 1920px;
@@ -204,12 +213,16 @@ i.bi{
   font-size: 24px;
   padding: 0 5px;
 }
+.icon_red_basic {
+  color: var(--red);
+}
 .icon_gray:hover{
   color: var(--gray);
 }
 .icon_red:hover{
   color: var(--red);
 }
+
 .icon_mint:hover{
   color: var(--mint);
 }
@@ -288,7 +301,30 @@ button{
   --bs-btn-disabled-bg: var(--dark-gray);
   --bs-btn-disabled-border-color: var(--dark-gray);
 }
-
+.btn-danger {
+  --bs-btn-bg: var(--red);
+  --bs-btn-border-color: var(--red);
+  --bs-btn-hover-color: var(--red);
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: var(--red);
+  --bs-btn-active-bg: var(--red);
+  --bs-btn-active-border-color: var(--red);
+  --bs-btn-disabled-bg: var(--red);
+  --bs-btn-disabled-border-color: var(--red);
+}
+.btn-outline-primary {
+  --bs-btn-color: var(--dark-blue);
+  --bs-btn-border-color: var(--dark-blue);
+  --bs-btn-hover-bg: var(--mint);
+  --bs-btn-hover-border-color: var(--mint);
+}
+.btn-dark-blue {
+  --bs-btn-hover-color: var(--white);
+  --bs-btn-color: var(--white);
+  --bs-btn-bg: var(--dark-blue);
+  --bs-btn-hover-bg: var(--mint);
+  --bs-btn-hover-border-color: var(--mint);
+}
 /* BOX-SHADOW */
 .box_shadow{
   background: var(--white);
@@ -327,7 +363,7 @@ button{
 
 /* SELECT */
 .ui-widget {
-  font-family: 'Pretendard-Regular', sans-serif;
+  font-family: 'Inter', sans-serif;
   text-align: center;
   color: var(--dark-gray);
 }
@@ -362,10 +398,42 @@ button{
   box-shadow: var(--mint-focus);
   border: var(--bs-border-width) solid var(--mint);
 }
+/*
+.ui-button .ui-icon {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-image: url(image/arrow_bot.svg);
+  background-position: 0 0;
+  order: 2;
+}
+*/
 
 /* hr */
 hr {
   margin: var(--base-unit) 0;
   color: var(--gray);
   opacity: 1;
+}
+
+
+/* Container */
+.container {
+  max-width: 1272px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+/* hidden */
+.hidden {
+  display: none;
+}
+/* img */
+img{
+  width: 100%;
+}
+
+ /* Gap */
+.mg_bot {
+  margin-bottom: var(--gap-unit);
 }
